--- a/ecommercemobile/package.json
+++ b/ecommercemobile/package.json
@@ -9,16 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
     "expo": "~52.0.46",
+    "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.0.1",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-paper": "^5.13.5",
-    "react-native-safe-area-context": "^4.12.0"
+    "react-native-paper": "^5.14.4",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "^4.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
