--- a/ecommercemobile/package.json
+++ b/ecommercemobile/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
@@ -16,6 +17,7 @@
     "axios": "^1.9.0",
     "expo": "~53.0.9",
     "expo-image-picker": "^16.1.4",
+    "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
     "moment": "^2.30.1",
     "react": "19.0.0",
@@ -23,8 +25,7 @@
     "react-native-paper": "^5.14.4",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0",
-    "expo-linear-gradient": "~14.1.4"
+    "react-native-screens": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
