--- a/ecommercemobile/package.json
+++ b/ecommercemobile/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
@@ -26,7 +27,9 @@
     "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.4",
+    "react-native-reanimated": "~3.17.4",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
@@ -34,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-syntax-flow": "^7.27.1",
     "@react-native-community/cli": "^18.0.0",
     "react-native-dotenv": "^3.4.11"
   },
