--- a/ecommercemobile/package.json
+++ b/ecommercemobile/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.4",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.4.0",
