--- a/commerceapp/requirements.txt
+++ b/commerceapp/requirements.txt
@@ -3,10 +3,12 @@ certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
 cloudinary==1.44.0
+commerce==0.1.dev0
 cryptography==44.0.3
 Django==4.2.21
 django-ckeditor==6.7.2
 django-cors-headers==4.7.0
+django-debug-toolbar==5.2.0
 django-js-asset==2.2.0
 django-oauth-toolkit==3.0.1
 django-paypal==2.1
@@ -16,10 +18,12 @@ idna==3.10
 inflection==0.5.1
 jwcrypto==1.5.6
 mock==5.2.0
+mysqlclient==2.2.7
 oauthlib==3.2.2
 packaging==25.0
 payment==0.0.1.2
 paypalrestsdk==1.13.3
+pillow==11.2.1
 pycparser==2.22
 PyMySQL==1.1.1
 pyOpenSSL==25.0.0
