--- a/ecommercemobile/package.json
+++ b/ecommercemobile/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/drawer": "^7.3.12",
@@ -24,17 +25,21 @@
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-gifted-charts": "^1.4.61",
     "react-native-paper": "^5.14.4",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-svg": "^15.12.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
